-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: qpid-cpp-0.34
-
Fix Version/s: qpid-cpp-1.35.0
-
Component/s: C++ Broker, C++ Clustering
-
Labels:None
A backup creates an UpdateTracker to delete non-existent queues at the end of an update, in the UpdateTracker destructor. However if an update is interrupted, it can leave a partially-used UpdateTracker behind. When the next update starts this can incorrectly delete queues at a sensitive moment and cause a crash.
See also https://bugzilla.redhat.com/show_bug.cgi?id=1333767