QPID-7357: c++ HA Backup crash during re-connect in failover

The problem: A backup creates an UpdateTracker to delete non-existent queues at
the end of an update, in the UpdateTracker destructor. However if an update is
interrupted, it can leave a partially-used UpdateTracker behind. When the next
update starts this can incorrectly delete queues at a sensitive moment and cause
a crash, or could cause queues to be removed incorrectly.

The fix is to move queue deletion out of the destructor so it is only run at
the end of a successful update.